--- a/src/nav.html
+++ b/src/nav.html
@@ -1,7 +1,7 @@
 <nav class="navbar col-lg-12 col-12 p-0 fixed-top d-flex flex-row">
         <div class="text-center navbar-brand-wrapper d-flex align-items-center justify-content-start">
-            <a class="navbar-brand brand-logo me-5" href="index.html"><img src="assets/images/logo.svg" class="me-2" alt="logo" /></a>
-            <a class="navbar-brand brand-logo-mini" href="index.html"><img src="assets/images/logo-mini.svg" alt="logo" /></a>
+            <a class="navbar-brand brand-logo me-5" href="users.php"><img src="assets/images/logo.svg" class="me-2" alt="logo" /></a>
+            <a class="navbar-brand brand-logo-mini" href="users.php"><img src="assets/images/logo-mini.svg" alt="logo" /></a>
         </div>
         <div class="navbar-menu-wrapper d-flex align-items-center justify-content-end">
             <ul class="navbar-nav navbar-nav-right">
@@ -15,7 +15,7 @@
     <nav class="sidebar sidebar-offcanvas" id="sidebar">
             <ul class="nav">
                 <li class="nav-item" style="margin-bottom:20px;">
-                        <span class="menu-title">Welcome:<span id="username-display"></span></span>
+                        <span class="menu-title">Welcome: <span id="username-display"></span></span>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="users.php">
