--- a/src/nav.html
+++ b/src/nav.html
@@ -14,8 +14,8 @@
     <div class="container-fluid page-body-wrapper">
     <nav class="sidebar sidebar-offcanvas" id="sidebar">
             <ul class="nav">
-                <li class="nav-item" style="margin-bottom:20px;">
-                        <span class="menu-title">Welcome: <span id="username-display"></span></span>
+                <li class="nav-item align-items-center d-flex" style="margin-bottom:20px; margin-left: 20px;">
+                       <h4 style="font-weight: bold;">Welcome: <span class="menu-title" id="username-display"> <p></p></h4>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="users.php">
